# UrlShortener

./: .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CRASH_DUMP_GUIDE.md  FAULT_INJECTION_LOG.md  README.md  Setup-Crash-Dump.ps1  sources.cmake  vcpkg.json
.claude/: MIGRATION_REPORT.md  settings.json
.claude/agents/: agent-orchestrator.md  app-architect.md  background-reviewer.md  cpp-expert.md  docs-updater.md  docs-writer.md  feature-reviewer.md  security-auditor.md  subtask-verifier.md  test-documenter.md  testing-expert.md
.claude/hooks/: _common.py  doc_link_check.py  github_audit.py  guard_bash.py  post_edit_format.py  run_tests.py  secret_scan.py  session_start.py
.claude/skills/adr-write/: SKILL.md
.claude/skills/doc-registry/: SKILL.md
.claude/skills/doc-xref/: SKILL.md
.claude/skills/document-tests/: SKILL.md
.claude/skills/link-check/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/secret-scan/: SKILL.md
.claude/skills/test-gap/: SKILL.md
.claude/skills/verify-subtask/: SKILL.md
.github/: COPILOT_FLEET_PORT.md  copilot-instructions.md
.github/agents/: agent-orchestrator.agent.md  app-architect.agent.md  background-reviewer.agent.md  cpp-expert.agent.md  docs-updater.agent.md  docs-writer.agent.md  feature-reviewer.agent.md  security-auditor.agent.md  subtask-verifier.agent.md  test-documenter.agent.md  testing-expert.agent.md
.github/hooks/: fleet.json
.github/hooks/scripts/: _common.py  doc_link_check.py  github_audit.py  guard_bash.py  post_edit_format.py  run_tests.py  secret_scan.py  session_start.py
.github/skills/adr-write/: SKILL.md
.github/workflows/: e2e-tests.yml  perf-analytics.yml  qa.yml  ubuntu-ci.yml  ubuntu-integration-tests.yml  ubuntu-unit-tests.yml
.junie/: AGENTS.md
build_debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
build_notest/: CMakeCache.txt
cmake/: FetchSOCI.cmake  dev-mode.cmake  fetch-boost.cmake  install-rules.cmake  variables.cmake
config/: analytics.example.yaml
docs/: ANALYTICS.md  OPERATIONS.md  analytics.md  backend-selection.md  benchmarking.md  configuration.md  deployment.md  operations-runbook.md  tls-operations.md
docs/admin/: 00-decision-record.md  01-product-and-ux-spec.md  02-react-frontend-architecture.md  05-data-model-and-storage.md
docs/agent/: CI_PIPELINE.md  CODING_GUARDRAILS.md  IMPLEMENTATION_TASKMAP.md  README_AGENT_PACKAGE.md  development-workflow.md  testing-requirements.md
docs/api/: README.md
docs/architecture/: BACKEND_TOPOLOGY.md  PERFORMANCE_CONTRACT.md  backend-topology.md  implementation-architecture.md  postgres-backend.md  security-model.md  sql-persistence.md  sqlite-backend.md
docs/operations/: postgres-local-dev.md
docs/qa/: AGENTIC_QA.md
docs/release-notes/: stage-05.md
docs/security/: 2026-07-17-redirect-route-refactor.md  2026-07-17-rest-api-route-refactor.md  local-auth-external-clients.md
docs/setup/: UBUNTU.md  ubuntu-setup.md
docs/specs/: rest-api-refactoring.md
docs/stages/: 00-STAGE_UBUNTU_DEPENDENCY_BASELINE.md  01-STAGE_URL_SHORTENER_CORE.md  02-STAGE_LINK_MANAGEMENT_FEATURES.md  03-STAGE_BACKEND_ABSTRACTION.md  04-STAGE_ANALYTICAL_EVENT_PIPELINE.md  05-STAGE_OBSERVABILITY_HARDENING.md
docs/storage/: configuration.md  how-to-add-adapter.md  overview.md  testing.md
docs/testing/: README.md  sqlite_state_assert.md
include/http_server/: http_server.h
include/url_shortener/: uri_map_singleton.h  url_shortener.h
qa/expected/: 02_create_short_url.json  03_redirects.json  05_fingerprinting.json  06_authentication.json  07_permissions.json  08_admin_api.json  10_concurrency.json
qa/scripts/: common.sh  mock_service.py  run_all_sections.sh  run_section.sh
qa/tmp/: qa.sqlite
qa_failures/20260522T060110Z/: summary.json
qa_failures/20260522T060111Z/: summary.json
scripting/: boost.sh
scripts/: benchmark_redirect.py  boost.cmd  build-boost-po.sh  setup_ubuntu_dependencies.sh
src/: cli_parser.cpp  http_server.cpp  main.cpp  uri_map_singleton.cpp  url_shortener.cpp
src/analytics/: AggregateQuery.cpp  AggregateStats.cpp  AnalyticsConfig.cpp  AnalyticsError.cpp  AnalyticsMetrics.cpp  AnalyticsService.cpp  AnalyticsWorker.cpp  BoundedClickEventQueue.cpp  ClickEvent.cpp  ClickEventBuilder.cpp  ClickEventSanitizer.cpp  ClientIdHasher.cpp  RetentionCleanupJob.cpp  click_event_queue.cpp
src/composition/: StorageFactory.cpp
src/config/: StorageConfig.cpp
src/core/: LinkService.cpp  utils.cpp
src/http/: AnalyticsStatsHandler.cpp  RedirectAnalyticsHook.cpp  RouteRegistry.cpp  Router.cpp  RouterBuilder.cpp  http_server.cpp  http_session.cpp  request_handlers.cpp
src/observability/: LogFields.cpp  LogLevel.cpp  Logger.cpp  LoggerFactory.cpp  LoggingConfig.cpp  StorageObservability.cpp
src/security/: AccessGuard.cpp  AuthAuditLogRepository.cpp  AuthBrokerService.cpp  AuthSession.cpp  AuthSessionRepository.cpp  ControlSet.cpp  FirstAdminBootstrap.cpp  PasswordHasher.cpp  ServiceClient.cpp  ServiceClientRepository.cpp  TokenGenerator.cpp  UserCredentialsRepository.cpp  UserManagementService.cpp
src/storage/: link_repository.cpp
test/: shortener_core_unit_test.cpp
test/cli_parser_test/: cli_parser_test.cpp
test/http_client_test/: http_client_test.py
test/integration/: 02_custom_slug_get_by_id_slug_test.py  04_disabled_redirect_test.py  08_short_url_base_domain_once_test.py  09_stage2_lifecycle_nonfunctional_test.py
test/unit/: 01_url_validation_accept_test.cpp  02_url_validation_reject_test.cpp  03_url_normalization_test.cpp  04_slug_accept_test.cpp  05_slug_reject_test.cpp  06_slug_collision_retry_test.cpp  07_expiry_logic_test.cpp  08_redirect_status_test.cpp  09_stage2_management_unit_test.cpp
tests/integration/: test_sqlite_state_assert_cli.py  test_sqlite_state_assert_runtime_cli.py
tests/unit/: test_sqlite_state_assert_compare.py  test_sqlite_state_assert_json_validation.py  test_sqlite_state_assert_matchers.py
tools/: route_registry_dump.cpp  sqlite_state_assert.py
(+540 files in other folders)
